--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
   <ion-app></ion-app>
 
   <!-- The polyfills js is generated during the build process -->
+  <script>var iosupload = document.querySelector('input[type="file"]');
+  </script>
   <script src="build/polyfills.js"></script>
 
   <!-- The vendor js is generated during the build process
