--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <script data-ionic="inject">
-    (function(w){var i=w.Ionic=w.Ionic||{};i.version='3.9.9';i.angular='5.2.11';i.staticDir='build/';})(window);
-  </script>
   <meta charset="UTF-8">
   <title>CmpClassOf2021</title>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -12,7 +9,7 @@
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#3ffa4e">
+  <meta name="theme-color" content="#009900">
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -38,8 +35,7 @@
   <ion-app></ion-app>
 
   <!-- The polyfills js is generated during the build process -->
-  <script>var iosupload = document.querySelector('input[type="file"]');
-  </script>
+
   <script src="build/polyfills.js"></script>
 
   <!-- The vendor js is generated during the build process
@@ -48,7 +44,7 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-  <script src="cordova.js"></script>
+  
 
 
 
