--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#009900">
+  <meta name="theme-color" content="#3ffa4e">
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -47,7 +47,7 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-  
+  <script src="cordova.js"></script>
 
 
 
