--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-
+  <script src="./assets//js/jquery-3.4.1.slim.min.js"></script>
+  <script src="./assets//js/jspdf.min.js"></script>
+  
 </head>
 <body>
 
